# demeter

./: Cargo.toml  README.md
src/: main.rs
src/demeter/: args.rs  mod.rs  style.rs  utils.rs
src/local/: harvest.rs  mod.rs
src/s3/: harvest.rs  mod.rs
src/smb/: harvest.rs  mod.rs
