[package]
name = "demeter"
version = "0.1.0"
edition = "2021"


[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
colored = "2.0"
regex = "1.5"
pavao = "0.2"
tokio = { version = "1.35.1", features = ["rt-multi-thread"] }
aws-config = { version = "1.1.4", features = ["behavior-version-latest"] }
aws-sdk-s3 = { version = "1.14.0" }


[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"