[package]
name = "demeter"
version = "0.1.0"
edition = "2021"


[dependencies]
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"
regex = "1.11"
pavao = "0.2"
tokio = { version = "1.41", features = ["rt-multi-thread"] }
aws-config = { version = "1.5", features = ["behavior-version-latest"] }
aws-sdk-s3 = { version = "1.63.0" }


[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
